<resources>
    <string name="app_name">toKindle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_kindle">toKindle</string>
    <string name="refresh">Refresh</string>
    <string name="preview">Preview</string>
    <string name="send_to">Send to %s</string>
    <string name="add_file">Add file</string>
    <string name="add">Add</string>
    <string name="add_from_url">Add from a URL</string>
    <string name="add_from_clipboard">Add %s</string>
    <string name="delete">Delete</string>
    <string name="source">Source</string>
    <string name="cancel">Cancel</string>
    <string name="url_hint">https://example.com/sample.html</string>
    <string name="unknown">Unknown</string>
    <string name="never_sent">Never sent</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="add_email">Add Kindle Id</string>
    <string name="email_dialog_message">Enter your Kindle mail</string>
    <string name="email_hint">your_kindle_id</string>
    <string name="empty_folder">Empty folder</string>
    <string name="no_documents_title">No documents</string>
    <string name="no_documents_subtext">Share files or webpages with the app and they will show up here</string>
    <string name="learn_more">Learn more</string>
    <string name="no_emails">Add your <b>Kindle email id</b>. It looks like <i>unique_id_for_your_device</i>@kindle.com.\nDon\'t know where to find it? <a href="https://tokindle.pawanhegde.com/help/find_kindle_id">Learn More</a></string>
    <string name="send_to_unknown">Send to …</string>
    <string name="add_first_email">Add at least one Kindle email id and then try sending again</string>
    <string name="done">Done</string>
    <string name="support">Support</string>
    <string name="close">Close</string>
    <string name="at_kindle_dot_com">\@kindle.com</string>
    <string name="download_missing">Download missing</string>
    <string name="try_refreshing">Try refreshing</string>
    <string name="downloading_from_internet">Downloading from internet</string>
    <string name="converting">Converting</string>
    <string name="saving_locally">Saving locally</string>
    <string name="no_activity_for_preview">No activity found that can preview this type of file</string>
    <string name="content_non_fetchable">The source app doesn\'t allow refetching</string>
</resources>