<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/action_bar"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    style="@style/ActivityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/to_kindle"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageButton
                    android:id="@+id/option_help"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="?attr/colorSurface"
                    android:contentDescription="@string/help"
                    android:src="@drawable/ic_outline_help_outline_24"
                    app:layout_constraintEnd_toStartOf="@id/option_settings" />

                <ImageButton
                    android:id="@+id/option_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="?attr/colorSurface"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/ic_outline_settings_24"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/no_documents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            style="@style/EmptyStateIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:contentDescription="@string/empty_folder"
            android:maxWidth="200dp"
            android:src="@drawable/ic_empty_folder" />

        <TextView
            style="@style/EmptyStateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_documents_title" />

        <TextView
            style="@style/EmptyStateSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_documents_subtext" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/documents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/document_card" />

    <com.leinardi.android.speeddial.SpeedDialOverlayLayout
        android:id="@+id/speedDialOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/fabOverlayColour" />

    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/speedDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:layout_behavior="@string/speeddial_scrolling_view_snackbar_behavior"
        app:sdMainFabClosedSrc="@drawable/add_24"
        app:sdOverlayLayout="@id/speedDialOverlay" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>